FIX rydde kodelister fjern gamle metrikker standard internal-oppsett (#40)
* FIX rydde kodelister fjern gamle metrikker standard internal-oppsett

* FIX Fjerne kommentert ut linje

* FIX sett enkelte konfigverdier pr miljø