@@ -1,12 +1,11 @@
 package no.nav.foreldrepenger.abonnent.web.app.konfig;
 
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import javax.ws.rs.ApplicationPath;
 import javax.ws.rs.core.Application;
 
+import no.nav.foreldrepenger.abonnent.web.app.metrics.PrometheusRestService;
 import no.nav.foreldrepenger.abonnent.web.app.tjenester.NaisRestTjeneste;
 import no.nav.foreldrepenger.abonnent.web.app.tjenester.SelftestRestTjeneste;
 
@@ -21,12 +20,7 @@ public class InternalApplication extends Application {
 
     @Override
     public Set<Class<?>> getClasses() {
-        Set<Class<?>> classes = new HashSet<>();
-
-        classes.add(NaisRestTjeneste.class);
-        classes.add(SelftestRestTjeneste.class);
-
-        return Collections.unmodifiableSet(classes);
+        return Set.of(NaisRestTjeneste.class, SelftestRestTjeneste.class, PrometheusRestService.class);
     }
 
 }
